RESOLVED FIXED44384
[Qt] Crash when purging the scratch buffer for the shadow
https://bugs.webkit.org/show_bug.cgi?id=44384
Summary [Qt] Crash when purging the scratch buffer for the shadow
Ariya Hidayat
Reported 2010-08-21 15:21:13 PDT
The purge timer might stop or fire after the application is destroyed, and thus causes a crash.
Attachments
Patch (2.72 KB, patch)
2010-08-21 16:11 PDT, Ariya Hidayat
no flags
Patch (2.82 KB, patch)
2010-08-22 21:41 PDT, Ariya Hidayat
kenneth: review+
Ariya Hidayat
Comment 1 2010-08-21 16:11:29 PDT
Ariya Hidayat
Comment 2 2010-08-21 17:04:33 PDT
Comment on attachment 65036 [details] Patch Andreas kindly suggested on IRC that the problem is solved easier by making ShadowBuffer a child of QCoreApplication::instance(). This leads me into thinking, maybe we should fix our shared timer instead so that application destruction stops and closes pending timers. Clearing the review flag while thinking about this.
Ariya Hidayat
Comment 3 2010-08-22 21:20:37 PDT
Apparently the problem is because TimerBase/Timer relies on thread global data, which is gone already after the application instance is destroyed. Thus, any static object can't use TimerBase/Timer with a risk of crashing.
Ariya Hidayat
Comment 4 2010-08-22 21:41:56 PDT
Andreas Kling
Comment 5 2010-08-22 21:45:50 PDT
Comment on attachment 65073 [details] Patch LGTM, feels like the best approach to this problem.
Kenneth Rohde Christiansen
Comment 6 2010-08-23 00:26:01 PDT
Comment on attachment 65073 [details] Patch Oh that is a bit sad...
Ariya Hidayat
Comment 7 2010-08-23 01:16:21 PDT
Note You need to log in before you can comment on or make changes to this bug.