[Qt] Crash when purging the scratch buffer for the shadow https://bugs.webkit.org/show_bug.cgi?id=44384

Patch by Ariya Hidayat <ariya@sencha.com> on 2010-08-23
Reviewed by Kenneth Rohde Christiansen.

WebCore::Timer can't be used in a static object bcause it relies on
thread global data, which is invalid once the application instance is
destroyed. To overcome the problem, use QObject's timer support for
the ShadowBuffer class.

* platform/graphics/qt/ContextShadow.cpp:
(WebCore::):
(WebCore::ShadowBuffer::ShadowBuffer):
(WebCore::ShadowBuffer::schedulePurge):
(WebCore::ShadowBuffer::timerEvent):

git-svn-id: svn://svn.chromium.org/blink/trunk@65795 bbb929c8-8fbe-4397-9dbb-9b2b20218538